syntax = "proto3";
package grpc;

option go_package = "github.com/SyntinelNyx/syntinel-agent/internal/proto";

service HardwareService {
  rpc SendHardwareInfo (HardwareInfo) returns (Response);
}

message HardwareInfo {
  string json_data = 1; // The JSON string containing hardware info
}

message Response {
  string message = 1; // Response message from the server
}

message ReceiveScript {
  bytes content = 1; // The script to be executed
}

message ScriptResponse {
  string output = 1; // The output of the script
}