syntax = "proto3";
package grpc;

option go_package = "github.com/SyntinelNyx/syntinel-agent/internal/proto";

service HardwareInfo {
  rpc SendHardwareInfo (HardwareInfoRequest) returns (HardwareResponse);
}

message HardwareInfoRequest {
  string json_data = 1; // The JSON string containing hardware info
}

message HardwareResponse {
  string message = 1; // Response message from the server
}

